# reactor-thermal-simulation

./: control.ipynb  data.xlsx  example_simulation.xlsx  heat_equations.py  heat_parameters_convection_internal_pipe_surface.py  heat_parameters_natural_convection_vectical_surface.py  heat_tranfer_coeficients.py  mpltest.ipynb  pyproject.toml  sim.py  simulation copy.py  simulation.ipynb  simulation.py  simulation_tools.py  tests.ipynb  water.py
